--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,12 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/valucosmos/public_html/
-    - /bin/rsync -av cosmos/ $DEPLOYPATH
+    - /usr/local/bin/python3 -m venv venv
+    - source venv/bin/activate
+    
+    - pip install -r requirements.txt
+    
+    - python cosmos/manage.py migrate
+    - python cosmos/manage.py collectstatic --noinput
+    
+    - systemctl restart cosmos
