--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,12 +1,11 @@
 ---
 deployment:
   tasks:
-    - /usr/local/bin/python3 -m venv venv
-    - source venv/bin/activate
+  
+    - ./virtualenv/bin/pip install -r requirements.txt
     
-    - pip install -r requirements.txt
+    - ./virtualenv/bin/python cosmos/manage.py migrate
     
-    - python cosmos/manage.py migrate
-    - python cosmos/manage.py collectstatic --noinput
+    - ./virtualenv/bin/python cosmos/manage.py collectstatic --noinput
     
-    - systemctl restart cosmos
+    - touch /home/valucosmos/cosmos/cosmos/wsgi.py
