perdon, otro cambio

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,11 +1,5 @@
 ---
 deployment:
   tasks:
-  
-    - ./virtualenv/bin/pip install -r requirements.txt
-    
-    - ./virtualenv/bin/python cosmos/manage.py migrate
-    
-    - ./virtualenv/bin/python cosmos/manage.py collectstatic --noinput
-    
-    - touch /home/valucosmos/cosmos/cosmos/wsgi.py
+    - export DEPLOYPATH=/home/valucosmos/public_html/
+    - /bin/cp -R cosmos/ $DEPLOYPATH
